--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,6 +16,10 @@ set -g @batt_medium_charge_icon "🌗 "
 set -g @batt_low_charge_icon "🌘"
 
 
+set -g prefix C-Space
+unbind-key C-b
+bind-key C-Space send-prefix
+
 set -s escape-time 0 
 set -g history-limit 30000
 set -g status-keys vi
@@ -23,7 +27,7 @@ set -g mouse on
 
 
 
-set-option -g default-command /usr/local/bin/zsh
+#set-option -g default-command /usr/local/bin/bash
 set-option -g default-terminal "screen-256color" 
 set-option -g renumber-windows on
 set-option -g visual-activity off
@@ -33,12 +37,20 @@ set-option -g bell-action none
 
 
 # Copy-paste integration
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+#set-option -g default-command "reattach-to-user-namespace -l bash"
 
 # Setup 'v' to begin selection as in Vim
-bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -T copy-mode-vi 'v' send -X begin-selection
+#bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
 
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
+
+#bind -t vi-copy V rectangle-toggle
+#bind -t vi-copy y "xclip -selection clipboard -in"
+#bind -t vi-copy Y "copy-selection"
+#unbind p
+#bind p run "tmux set-buffer \"$(xclip -selection clipboard -out)\"; tmux paste-buffer"
 
 
 # KEY BINDINGS
@@ -89,6 +101,10 @@ setw -g window-status-current-format "#[bg=colour235] #I#[fg=colour47]:#[fg=colo
 
 
 # Easy config reload
-bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
+#bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 run '~/.tmux/plugins/tpm/tpm'
+run-shell ~/.tmux/plugins/tmux-yank/yank.tmux
+
+
+
