fixed vim style yank; added .zsh_profile to run .bash_aliases

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -40,11 +40,12 @@ set-option -g bell-action none
 #set-option -g default-command "reattach-to-user-namespace -l bash"
 
 # Setup 'v' to begin selection as in Vim
-#bind-key -T copy-mode-vi 'v' send -X begin-selection
-#bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind P paste-buffer
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
 
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+#bind -t vi-copy 'v' begin-selection
+#bind -t vi-copy 'y' copy-selection
 
 #bind -t vi-copy V rectangle-toggle
 #bind -t vi-copy y "xclip -selection clipboard -in"
@@ -105,6 +106,3 @@ setw -g window-status-current-format "#[bg=colour235] #I#[fg=colour47]:#[fg=colo
 
 run '~/.tmux/plugins/tpm/tpm'
 run-shell ~/.tmux/plugins/tmux-yank/yank.tmux
-
-
-
