--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -40,17 +40,18 @@ set-option -g bell-action none
 #set-option -g default-command "reattach-to-user-namespace -l bash"
 
 # Setup 'v' to begin selection as in Vim
+#bind P paste-buffer
 #bind-key -T copy-mode-vi 'v' send -X begin-selection
-#bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -T copy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
 
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
 
-#bind -t vi-copy V rectangle-toggle
-#bind -t vi-copy y "xclip -selection clipboard -in"
-#bind -t vi-copy Y "copy-selection"
-#unbind p
-#bind p run "tmux set-buffer \"$(xclip -selection clipboard -out)\"; tmux paste-buffer"
+# TMUX <2.4
+#http://www.rushiagr.com/blog/2016/06/16/everything-you-need-to-know-about-tmux-copy-pasting-ubuntu
+bind P paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy 'r' rectangle-toggle
+
 
 
 # KEY BINDINGS
@@ -105,6 +106,3 @@ setw -g window-status-current-format "#[bg=colour235] #I#[fg=colour47]:#[fg=colo
 
 run '~/.tmux/plugins/tpm/tpm'
 run-shell ~/.tmux/plugins/tmux-yank/yank.tmux
-
-
-
