--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,19 +1,19 @@
 # PLUGINS
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'nhdaly/tmux-better-mouse-mode'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @shell_mode 'vi'
-set -g @scroll-speed-num-lines-per-scroll 10
+#set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'tmux-plugins/tmux-sensible'
+#set -g @plugin 'tmux-plugins/tmux-yank'
+#set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+#set -g @plugin 'tmux-plugins/tmux-battery'
+#set -g @shell_mode 'vi'
+#set -g @scroll-speed-num-lines-per-scroll 10
 
 
-set -g @batt_charged_icon "🔋"
-set -g @batt_charging_icon "🔌"
-set -g @batt_full_charge_icon "🌕"
-set -g @batt_high_charge_icon "🌖 "
-set -g @batt_medium_charge_icon "🌗 "
-set -g @batt_low_charge_icon "🌘"
+#set -g @batt_charged_icon "🔋"
+#set -g @batt_charging_icon "🔌"
+#set -g @batt_full_charge_icon "🌕"
+#set -g @batt_high_charge_icon "🌖 "
+#set -g @batt_medium_charge_icon "🌗 "
+#set -g @batt_low_charge_icon "🌘"
 
 
 set -s escape-time 0 
@@ -23,8 +23,8 @@ set -g mouse on
 
 
 
-set-option -g default-command /usr/local/bin/zsh
-set-option -g default-terminal "screen-256color" 
+#set-option -g default-command /usr/local/bin/zsh
+#set-option -g default-terminal "screen-256color" 
 set-option -g renumber-windows on
 set-option -g visual-activity off
 set-option -g visual-bell off
@@ -33,11 +33,11 @@ set-option -g bell-action none
 
 
 # Copy-paste integration
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Setup 'v' to begin selection as in Vim
-bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+#bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 
 
