--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,11 +33,12 @@ set-option -g bell-action none
 
 
 # Copy-paste integration
-#set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Setup 'v' to begin selection as in Vim
-#bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-#bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode 'y' send -X copy-pipe-and-cancel "pbcopy"
+#bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy" # old mode as of 12/25/19
 
 
 
@@ -67,8 +68,8 @@ set -g status-right-length 500
 set-option -g status-bg colour237
 
 # pane border
-set -g pane-active-border-fg colour49
-set -g pane-border-fg colour240
+#set -g pane-active-border-fg colour49
+#set -g pane-border-fg colour240
 
 ## Window Options
 setw -g mode-keys vi 
@@ -78,10 +79,10 @@ set-window-option -g monitor-activity off # loud or quiet?
 set -g status-right "#[bold, bg=colour233,fg=colour15] #{battery_icon} #{battery_percentage} #[bold, bg=colour233,fg=colour119] | %H:%M | %a %e %b %Y "
 
 # window status
-setw -g window-status-fg colour237
-setw -g window-status-bg colour235
-setw -g window-status-current-fg colour27
-setw -g window-status-current-bg colour234
+#setw -g window-status-fg colour237
+#setw -g window-status-bg colour235
+#setw -g window-status-current-fg colour27
+#setw -g window-status-current-bg colour234
 setw -g window-status-format "#I #[bg=colour234] #W "
 setw -g window-status-current-format "#[bg=colour235] #I#[fg=colour47]:#[fg=colour27]#P #[bg=colour234, fg=colour87] #W "
 
