--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,48 +1,39 @@
-# PLUGINS
+## 
+# Plugins
+##
 #set -g @plugin 'tmux-plugins/tpm'
-#set -g @plugin 'tmux-plugins/tmux-sensible'
-#set -g @plugin 'tmux-plugins/tmux-yank'
-#set -g @plugin 'nhdaly/tmux-better-mouse-mode'
-#set -g @plugin 'tmux-plugins/tmux-battery'
-#set -g @shell_mode 'vi'
-#set -g @scroll-speed-num-lines-per-scroll 10
+set -g @plugin 'tmux-plugins/tmux-battery'
+
+## 
+# Options
+##
+#set -g @plugin 'tmux-plugins/tpm'
+set -g bell-action                      none
+set -g default-terminal                 "screen-256color" 
+set -s escape-time                      0 
+set -g history-limit                    30000
+set -g mouse                            on
+set -g renumber-windows                 on
+set -g status                           on
+set -g status-bg                        colour235
+set -g status-keys                      vi
+set -g status-left-length               005
+set -g status-position                  bottom
+set -g status-right                     "#[bold,bg=colour234,fg=colour119][#[fg=colour0]#{battery_percentage}#[fg=colour119]][#[fg=colour0]%H:%M#[fg=colour119]|#[fg=colour0]%Y-%b-%d#[fg=colour119]] "
+set -g status-right-length              500
+set -g visual-activity                  off
+set -g visual-bell                      off
+set -g visual-silence                   off
+setw -g clock-mode-style                24 
+setw -g mode-keys                       vi 
+setw -g monitor-activity                off # loud or quiet?
+setw -g window-status-format            "#I #[bg=colour233] #W "
+setw -g window-status-current-format    "#[bold, bg=colour235, fg=colour27] #I#[fg=colour47]:#[fg=colour0]#P #[bg=colour234, fg=colour12] #W "
 
 
-#set -g @batt_charged_icon "🔋"
-#set -g @batt_charging_icon "🔌"
-#set -g @batt_full_charge_icon "🌕"
-#set -g @batt_high_charge_icon "🌖 "
-#set -g @batt_medium_charge_icon "🌗 "
-#set -g @batt_low_charge_icon "🌘"
-
-
-set -s escape-time 0 
-set -g history-limit 30000
-set -g status-keys vi
-set -g mouse on
-
-
-
-#set-option -g default-command /usr/local/bin/zsh
-#set-option -g default-terminal "screen-256color" 
-set-option -g renumber-windows on
-set-option -g visual-activity off
-set-option -g visual-bell off
-set-option -g visual-silence off
-set-option -g bell-action none
-
-
-# Copy-paste integration
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-
-# Setup 'v' to begin selection as in Vim
-bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode 'y' send -X copy-pipe-and-cancel "pbcopy"
-#bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy" # old mode as of 12/25/19
-
-
-
-# KEY BINDINGS
+##
+# Key Bindings
+##
 bind-key | split-window -h -c "#{pane_current_path}"        # vertical split using <prefix> + |
 bind-key _ split-window -v -c "#{pane_current_path}"         # horizontal split using <prefix> + _
 
@@ -58,36 +49,11 @@ bind-key -n C-K resize-pane -U 5
 bind-key -n C-H resize-pane -L 5
 bind-key -n C-L resize-pane -R 5
 
-
-## Theme
-# Status bar design
-set -g status on
-set -g status-position bottom
-set -g status-left-length 005
-set -g status-right-length 500
-set-option -g status-bg colour237
-
-# pane border
-#set -g pane-active-border-fg colour49
-#set -g pane-border-fg colour240
-
-## Window Options
-setw -g mode-keys vi 
-setw -g clock-mode-style 24 
-set-window-option -g monitor-activity off # loud or quiet?
-
-set -g status-right "#[bold, bg=colour233,fg=colour15] #{battery_icon} #{battery_percentage} #[bold, bg=colour233,fg=colour119] | %H:%M | %a %e %b %Y "
-
-# window status
-#setw -g window-status-fg colour237
-#setw -g window-status-bg colour235
-#setw -g window-status-current-fg colour27
-#setw -g window-status-current-bg colour234
-setw -g window-status-format "#I #[bg=colour234] #W "
-setw -g window-status-current-format "#[bg=colour235] #I#[fg=colour47]:#[fg=colour27]#P #[bg=colour234, fg=colour87] #W "
-
-
-
+# Copy-paste integration
+# Setup 'v' to begin selection as in Vim, 'y' to yank selection
+set -g default-command "reattach-to-user-namespace -l zsh"
+bind-key -T copy-mode-vi 'v' send -X begin-selection 
+bind-key -T copy-mode    'y' send -X copy-pipe-and-cancel "pbcopy"
 
 # Easy config reload
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
