--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,7 +9,7 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 ##
 #set -g @plugin 'tmux-plugins/tpm'
 set -g bell-action                      none
-set -g default-terminal                 "screen-256color" 
+#set -g default-terminal                 "screen-256color" 
 set -s escape-time                      0 
 set -g history-limit                    30000
 set -g mouse                            on
